Fixes #803: 'Associated Event CRFs' table is blank at 'Remove CRF' version page. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1393 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -899,14 +899,14 @@
         <servlet-class>org.akaza.openclinica.control.admin.RestoreSubjectServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>RemoveCRFVersionServlet</servlet-name>
+        <servlet-name>removeCRFVersionServlet</servlet-name>
         <display-name>RemoveCRFVersion</display-name>
-        <servlet-class>org.akaza.openclinica.control.admin.RemoveCRFVersionServlet</servlet-class>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>RestoreCRFVersionServlet</servlet-name>
+        <servlet-name>restoreCRFVersionServlet</servlet-name>
         <display-name>RestoreCRFVersion</display-name>
-        <servlet-class>org.akaza.openclinica.control.admin.RestoreCRFVersionServlet</servlet-class>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ViewSubjectServlet</servlet-name>
@@ -1868,11 +1868,11 @@
         <url-pattern>/RestoreCRF</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>RemoveCRFVersionServlet</servlet-name>
+        <servlet-name>removeCRFVersionServlet</servlet-name>
         <url-pattern>/RemoveCRFVersion</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>RestoreCRFVersionServlet</servlet-name>
+        <servlet-name>restoreCRFVersionServlet</servlet-name>
         <url-pattern>/RestoreCRFVersion</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
