Fixes #1264: Extract Datasets in Excel 2007-2013 Format. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1439 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/extract.properties
+++ b/web/src/main/resources/extract.properties
@@ -125,6 +125,7 @@ extract.number=99
 # optional tag below, database properties
 # if this is commented out, ClinCapture's default setting from datainfo.properties
 # will be used instead
+extract.1.order=1
 extract.1.odmType=full
 extract.1.file=copyXML.xsl
 extract.1.fileDescription=CDISC ODM XML 1.3 Full with ClinCapture extensions
@@ -137,7 +138,7 @@ extract.1.exportname=odm1.3_full$datasetName_$dateTime.xml
 extract.1.success=The extract completed successfully. The file is available for download $linkURL.
 #extract.1.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
-
+extract.2.order=2
 extract.2.odmType=clinical_data
 extract.2.file=copyXML.xsl
 extract.2.fileDescription=CDISC ODM XML 1.3 Clinical Data with ClinCapture extensions
@@ -150,7 +151,7 @@ extract.2.exportname=odm1.3_clinical_ext_$datasetName_$dateTime.xml
 extract.2.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.2.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
-
+extract.3.order=3
 extract.3.odmType=clinical_data
 extract.3.file=odm1.3_to_1.3_no_extensions.xsl
 extract.3.fileDescription=CDISC ODM XML 1.3 Clinical Data
@@ -163,7 +164,7 @@ extract.3.exportname=odm1.3_clinical_$datasetName_$dateTime.xml
 extract.3.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.3.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
-
+extract.4.order=4
 extract.4.odmType=clinical_data
 extract.4.file=odm1.3_to_1.2_extensions.xsl
 extract.4.fileDescription=CDISC ODM XML 1.2 Clinical Data with ClinCapture extensions
@@ -176,7 +177,7 @@ extract.4.exportname=odm1.2_clinical_ext_$datasetName_$dateTime.xml
 extract.4.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.4.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
-
+extract.5.order=5
 extract.5.odmType=clinical_data
 extract.5.file=odm1.3_to_1.2.xsl
 extract.5.fileDescription=CDISC ODM XML 1.2 Clinical Data
@@ -189,7 +190,7 @@ extract.5.exportname=odm1.2_clinical_$datasetName_$dateTime.xml
 extract.5.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.5.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
-
+extract.6.order=6
 extract.6.odmType=clinical_data
 extract.6.file=odm_to_html.xsl
 extract.6.fileDescription=View as HTML
@@ -202,12 +203,12 @@ extract.6.exportname=HTML_$datasetName_$dateTime.html
 extract.6.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.6.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
-
+extract.7.order=7
 extract.7.odmType=clinical_data
 extract.7.file=ODMToTAB.xsl
-extract.7.fileDescription=Excel Spreadsheet
+extract.7.fileDescription=Excel Spreadsheet 1997-2003 (.xls)
 extract.7.linkText=Run Now
-extract.7.helpText=Generate a tabular view of your data to be opened by Excel.
+extract.7.helpText=Generate a tabular view of your data to be opened by Excel 1997-2003.
 extract.7.location=$exportFilePath/$datasetName/EXCEL
 extract.7.exportname=EXCEL_$datasetName_$dateTime.xls
 #extract.7.zip=true
@@ -215,7 +216,7 @@ extract.7.exportname=EXCEL_$datasetName_$dateTime.xls
 extract.7.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.7.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
-
+extract.8.order=9
 extract.8.odmType=clinical_data
 extract.8.file=ODMToTAB.xsl
 extract.8.fileDescription=Tab-delimited Text
@@ -228,7 +229,7 @@ extract.8.exportname=TAB_$datasetName_$dateTime.tsv
 extract.8.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.8.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
-
+extract.9.order=10
 extract.9.odmType=clinical_data
 extract.9.file=odm_spss_sps.xsl,odm_spss_dat.xsl
 extract.9.fileDescription=SPSS data and syntax
@@ -246,6 +247,7 @@ extract.9.zipName=SPSS_$datasetName_$dateTime.spss
 extract.9.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.9.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
+extract.10.order=11
 extract.10.odmType=full
 extract.10.file=copyXML.xsl
 extract.10.fileDescription=SAS Dataset
@@ -254,6 +256,19 @@ extract.10.helpText=SAS Dataset.
 extract.10.location=$exportFilePath/$datasetName/sas_dataset
 extract.10.exportname=odm1.3_full$datasetName_$dateTime.xml
 extract.10.success=The extract completed successfully. The file is available for download $linkURL.
+
+extract.11.order=8
+extract.11.odmType=clinical_data
+extract.11.file=ODMToTAB.xsl
+extract.11.fileDescription=Excel Spreadsheet 2007-2013 (.xlsx)
+extract.11.linkText=Run Now
+extract.11.helpText=Generate a tabular view of your data to be opened by Excel 2007-2013.
+extract.11.location=$exportFilePath/$datasetName/EXCEL13
+extract.11.exportname=EXCEL_$datasetName_$dateTime.xlsx
+#extract.11.zip=true
+#extract.11.deleteOld=true
+extract.11.success=Your extract job completed successfully. The file is available for download $linkURL.
+#extract.11.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
 ##############################################################
 # 4. Postprocessing Options
