--- a/pom.xml
+++ b/pom.xml
@@ -721,6 +721,7 @@
 				    	<checkModificationExclude>build.properties</checkModificationExclude>
 				    	<checkModificationExclude>medical-coding/test.log</checkModificationExclude>
 				      	<checkModificationExclude>core/openclinica-test.log</checkModificationExclude>
+				      	<checkModificationExclude>core/Agent_Administration_v2.0_ssID1.pdf</checkModificationExclude>
 				      	<checkModificationExclude>web/openclinica-test.log</checkModificationExclude>
 				    </checkModificationExcludes>
 				  </configuration>
