Add this file to ignore to reduce diff noise
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1519 14881f01-568e-124b-961a-bb94932aa8d1

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,26 @@
+.DS_Store
 build.properties
-
 core/target/
 core/.project
 core/.classpath
 core/.settings/
 core/openclinica-test.log
 web/openclinica-test.log
-
 web/target/
 web/.project
 web/.settings/
 web/.classpath
-
 ws/target/
 ws/.project
 ws/.settings/
 ws/.classpath
-
 ws-cabig/target/
 ws-cabig/.project
 ws-cabig/.settings/
 ws-cabig/.classpath
-
 medical-coding/target
 medical-coding/.project
 medical-coding/.settings/
 medical-coding/.classpath
 medical-coding/test.log
-
-.DS_Store
-
-
+core/Agent_Administration_v2.0_ssID1.pdf
