--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.clinovo.clincapture</groupId>
 		<artifactId>clincapture</artifactId>
-		<version>2.0.5</version>
+		<version>2.0.6-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
