Fixes #1361: Cannot restore CRF to event. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1596 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -567,9 +567,9 @@
         <servlet-class>org.akaza.openclinica.control.managestudy.RemoveCRFFromDefinitionServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>RestoreCRFFromDefinitionServlet</servlet-name>
+        <servlet-name>restoreCRFFromDefinitionServlet</servlet-name>
         <display-name>RestoreCRFFromDefinition</display-name>
-        <servlet-class>org.akaza.openclinica.control.managestudy.RestoreCRFFromDefinitionServlet</servlet-class>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>addCRFToDefinitionServlet</servlet-name>
@@ -1677,7 +1677,7 @@
         <url-pattern>/RemoveCRFFromDefinition</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>RestoreCRFFromDefinitionServlet</servlet-name>
+        <servlet-name>restoreCRFFromDefinitionServlet</servlet-name>
         <url-pattern>/RestoreCRFFromDefinition</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
